--- a/MovieLibrary.csproj
+++ b/MovieLibrary.csproj
@@ -1,8 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualBasic" Version="10.3.0"/>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1"/>
+  </ItemGroup>
 </Project>
